--- a/kurikulum/index.html
+++ b/kurikulum/index.html
@@ -148,7 +148,7 @@
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Halo Sensei!</h3>
-                <h1 class="display-2">Absensi Murid Dulu</h1>
+                <h1 class="display-2">Absensi Murid Dulu Yuk!</h1>
             </div>
         </div> <!-- end section-header -->
         </div> 
